tests/build/impl_ui_node_macro/fail/invalid_delegate_iter_pair.stderr
error: expected `, delegate_iter_mut: <expr>`
 --> $DIR/invalid_delegate_iter_pair.rs:6:46
  |
6 | #[impl_ui_node(delegate_iter: self.inner.iter())]
  |                                              ^^

error: expected `, delegate_iter: <expr>`
  --> $DIR/invalid_delegate_iter_pair.rs:12:54
   |
12 | #[impl_ui_node(delegate_iter_mut: self.inner.iter_mut())]
   |                                                      ^^

warning: unused import: `UiNode`
 --> $DIR/invalid_delegate_iter_pair.rs:1:46
  |
1 | use zero_ui::core::{impl_ui_node, WidgetVec, UiNode};
  |                                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
